@startuml
hide empty members

package "ska_tmc_cdm.messages" as base {

  package "skydirection.py" as skydirection <<Rectangle>> {
    abstract class SkyDirection {}
    SkyDirection <|-- TLEField
    SkyDirection <|-- SpecialField
    SkyDirection <|-- ICRSField
    SkyDirection <|-- GalacticField
    SkyDirection <|-- AltAzField
  }

  package "subarraynode.configure" as main {

    package "receptorgroup.py" as bar <<Rectangle>> {

      enum TrajectoryType {
        FIXED
        SPIRAL
        RASTER
        CONSTANT_VELOCITY
        TABLE
        HYPOTROCHOID
      }


      class TableTrajectory {
        name = TrajectoryType.TABLE
      }
      class "Attrs" as TableTrajectoryAttrs {
        x: list[float]
        y: list[float]
        t: list[float]
      }
      TableTrajectory +-- "attrs" TableTrajectoryAttrs

      class FixedTrajectory {
        name = TrajectoryType.FIXED
      }
      class "Attrs" as FixedTrajectoryAttrs {
        x: float
        y: float
      }
      FixedTrajectory +-- "attrs" FixedTrajectoryAttrs


      abstract class Trajectory {
        {abstract} name: TrajectoryType
      }
      Trajectory <|--- TableTrajectory
      Trajectory <|--- FixedTrajectory

      enum ProjectionType {
        SIN
        TAN
        ARC
        STG
        CAR
        SSN
      }

      enum ProjectionAlignment {
        ICRS
        ALTAZ
      }

      class Projection {
        name: ProjectionType = ProjectionType.SIN
        alignment: ProjectionAlignment = ProjectionAlignment.ICRS
      }

      class ReceptorGroup {
        receptors: set[str]
      }
      ReceptorGroup *-- "0..1" Trajectory
      ReceptorGroup *-- "0..1" Projection
      ReceptorGroup *- "1" SkyDirection
    }
  }
}

@enduml
